--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>ZKmartt - User Dashboard</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
         }
         .navbar-brand {
-            font-size: 1.5em;
+            font-size: 1.8em;
             font-weight: bold;
         }
         .nav-link {
@@ -23,13 +25,37 @@
         }
         .card {
             margin: 20px;
+            border: none;
+            transition: transform 0.2s;
+        }
+        .card:hover {
+            transform: scale(1.05);
+        }
+        .card-title {
+            font-size: 1.5em;
+            font-weight: bold;
+        }
+        .btn-primary {
+            background-color: #007bff;
+            border: none;
+            font-size: 1.1em;
         }
         footer {
             background-color: #343a40;
             color: white;
             padding: 20px 0;
             text-align: center;
-            margin-top: 20px;
+            margin-top: 40px;
+        }
+        .container section {
+            margin-top: 50px;
+        }
+        h2 {
+            margin-bottom: 30px;
+            font-size: 2em;
+        }
+        p {
+            font-size: 1.2em;
         }
     </style>
 </head>
@@ -185,19 +211,19 @@
     <!-- Shipping Policy -->
     <section id="shipping" class="container mt-5">
         <h2>Shipping Policy</h2>
-        <p>Our products are shipped within 1-2 business days. The delivery timeline may vary depending on the location, with a maximum timeline of 7-10 business days.</p>
+        <p>Our products are shipped within 1-2 business days. Delivery times may vary based on your location, with an estimated delivery time of 5-10 business days.</p>
         <!-- Add more shipping policy details here -->
     </section>
-
+    
     <!-- Contact Us -->
     <section id="contact" class="container mt-5">
         <h2>Contact Us</h2>
-        <p>For any inquiries or support, please contact us at:</p>
-        <p>Phone: +91-XXXXXXXXXX</p> <!-- Replace with actual contact number -->
-        <p>Address: 123 Market Street, Commerce City, India</p> <!-- Replace with actual address -->
-        <!-- Add more contact details here -->
+        <p>If you have any questions or need assistance, please contact us at:</p>
+        <p>Phone: +91-1234567890</p>
+        <p>Address: 123, ZKmartt Street, Mumbai, India</p>
     </section>
 
+    <!-- Footer -->
     <footer>
         &copy; 2024 ZKmartt. All rights reserved.
     </footer>
